--- a/css/min_style.css
+++ b/css/min_style.css
@@ -52,3 +52,32 @@ a {
 h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;margin: 0;padding: 0;}
 /*--------------------*/
 
+/*Стили для шрифтов*/
+.h2_40 {
+	color:  #333;
+	font-family: "PT Sans";
+	font-size: 40px;
+	font-style: normal;
+	font-weight: 700;
+	line-height: 140%; /* 56px */
+}
+.p_grey_16 {
+	color: var(--black, #333);
+	font-family: "PT Sans";
+	font-size: 16px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: 140%; /* 22.4px */
+	padding-bottom: 16px;
+}
+.p_grey_16_list_item {
+	color: var(--black, #333);
+	font-family: "PT Sans";
+	font-size: 16px;
+	font-style: normal;
+	font-weight: 400;
+	padding-bottom: 16px;
+	line-height: 140%; /* 22.4px */
+	list-style-type:disc;
+	margin-left: 20px;
+}
