--- a/css/style.css
+++ b/css/style.css
@@ -103,9 +103,9 @@
 	text-transform: uppercase;
 }
 .section_tabs {
-	flex-grow: 1;
-	flex-shrink: 0;
-	flex-basis: 636px;
+	flex-grow: 0;
+	flex-shrink: 1;
+	max-width: 636px;
 	height: auto;
 	display: flex;
 	justify-content: flex-end;
@@ -113,7 +113,7 @@
 	gap: 24px 24px;
 }
 .tabs_panel {
-	flex: 0 1 306px;
+	flex: 0 1 48%;
 	height: 250px;
 	border-radius: 20px;
 	padding: 30px 35px;
@@ -241,4 +241,82 @@
 	font-style: normal;
 	font-weight: 400;
 	line-height: 140%; /* 19.6px */
+}
+
+/*Страница - О компании */
+
+/*Главная секция - section_about_company */
+.section_about_company {
+	width: 100%;
+	height: auto;
+	position: relative;
+}
+.about_company_bg {
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background: var(--purple, #3D348B);
+	opacity: 0.05;
+	z-index: 1;
+}
+.about_company_content {
+	padding: 100px 0px;
+	max-width: 1296px;
+	margin: 0px auto;
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	align-items: flex-start;
+	position: relative;
+	z-index: 2;
+	gap: 60px 0px;
+}
+.company_content_header {
+	flex: 0 1 100%;
+}
+.company_content_left {
+	flex-shrink: 1;
+	flex-grow: 1;
+	max-width: 636px;
+}
+.company_content_right {
+	flex-shrink: 1;
+	flex-grow: 1;
+	max-width: 526px;
+}
+.video_block {
+	width: 100%;
+	height: auto;
+	display: flex;
+	border-radius: 20px;
+	position: relative;
+	margin-bottom: 20px;
+}
+.bg_img_video{
+	width: 100%;
+	height: auto;
+	object-fit: cover;
+}
+.btn_img {
+	position: absolute;
+	width: 80px;
+	height: 80px;
+	top:50%;
+	left:50%;
+	transform:translate(-50%, -50%);
+}
+.request_tabs {
+	width: 100%;
+	padding: 30px 35px;
+	border-radius: 20px;
+	background: var(--blue, #5DB7DE);
+	display: flex;
+	flex-direction: column;
+	height: 170px;
+}
+.p13 {
+	font-size: 15px;
+	text-transform: uppercase;
 }
