--- a/css/min_style.css
+++ b/css/min_style.css
@@ -81,3 +81,39 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;margin: 0;padding: 0;}
 	list-style-type:disc;
 	margin-left: 20px;
 }
+.p_date_news {
+	color: var(--black, #333);
+	font-family: "PT Sans";
+	font-size: 13px;
+	font-style: normal;
+	font-weight: 700;
+	line-height: 140%; /* 18.2px */
+	letter-spacing: 1.3px;
+	text-transform: uppercase;
+	padding-bottom: 15px;
+}
+.p_title_news {
+	color: var(--black, #333);
+	font-family: "PT Sans";
+	font-size: 13px;
+	font-style: normal;
+	font-weight: 700;
+	line-height: 140%; /* 18.2px */
+	letter-spacing: 1.3px;
+	text-transform: uppercase;
+	padding-bottom: 15px;
+	height: 54px;
+	overflow: hidden;
+	max-width: 306px;
+}
+.p_content_news {
+	max-width: 306px;
+	height: 60px;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	font-family: "PT Sans";
+	font-size: 14px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: 140%; /* 19.6px */
+}
