--- a/css/style.css
+++ b/css/style.css
@@ -243,6 +243,45 @@
 	line-height: 140%; /* 19.6px */
 }
 
+/*Верстка - блок с указанием названия старницы */
+.name_page {
+	width: 100%;
+	height: auto;
+	position: relative;
+	border-top: 1px solid black;
+	border-bottom: 1px solid black;
+}
+.name_page_bg {
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 1;
+	opacity: 0.05;
+	background: var(--purple, #3D348B);
+}
+.name_page_content {
+	position: relative;
+	z-index: 2;
+	margin: 0px auto;
+	padding: 25px 0px;
+	max-width: 1296px;
+	display: flex;
+	justify-content: flex-start;
+	align-items: center;
+	gap: 15px;
+}
+.name_page_content a {
+	color: var(--black, #333);
+	font-family: "PT Sans";
+	font-size: 13px;
+	font-style: normal;
+	font-weight: 700;
+	line-height: 140%; /* 18.2px */
+	letter-spacing: 1.3px;
+	text-transform: uppercase;
+}
 /*Страница - О компании */
 
 /*Главная секция - section_about_company */
@@ -319,4 +358,37 @@
 .p13 {
 	font-size: 15px;
 	text-transform: uppercase;
+}
+
+/*Верстка страница новости - news*/
+
+.section_news_company {
+	width: 100%;
+	height: auto;
+}
+.news_company {
+	max-width: 1296px;
+	height: auto;
+	margin: 0px auto;
+	padding: 150px 0px;
+	display: flex;
+	flex-wrap: wrap;
+	gap: 60px 24px;
+}
+.news_company_header {
+	flex: 1 1 100%;
+}
+.news_tabs {
+	flex: 0 1 306px;
+	transition: 0.6s ease-out;
+	cursor: pointer;
+}
+.news_tabs:hover {
+	opacity: 0.8;
+}
+.news_tabs_img {
+	width: 100%;
+	height: 214px;
+	border-radius: 20px;
+	margin-bottom: 25px;
 }
